@@ -459,6 +459,9 @@ error-while-loading-mod=Error while loading mod __1__.
 more-info=More info
 back-button=Back
 load-error-advice=Check that these mods load in Factorio.\nYAFC only supports loading mods that were loaded in Factorio before. If you add or remove mods or change startup settings, you need to load those in Factorio and then close the game because Factorio saves mod-list.json only when exiting.\nCheck that Factorio loads mods from the same folder as YAFC.\nIf that doesn't help, try removing the mods that have several versions, or are disabled, or don't have the required dependencies.
+load-error-needs-new-defines=Yafc encountered an error that can usually be fixed by running a command in Factorio.\nPlease follow these steps:\n\n1) Click '__YAFC__copy-update-defines-command__'.\n2) Start a new game in Factorio.\n3) Press the {`} key. (Usually above Tab and left of 1)\n4) Paste the copied command and press Enter (or Return).\n5) Press {`} again, the up key, and Enter (or Return).\n6) Exit Factorio.\n\nYafc will automatically attempt to reload these mods.
+copy-update-defines-command=Copy command to the clipboard
+load-error-not-yet-updated=If Yafc did not automatically reload after you ran the command, please copy script-output/Defines.lua to the folder __1__\nThen click this button and try to load your project again.
 
 ; WizardPanel.cs
 wizard-finish=Finish
@@ -630,7 +633,7 @@ milestone-analysis-most-inaccessible=More than 50% of all in-game objects appear
 milestone-analysis-no-rocket-launch=Rocket launch appears to be inaccessible. This means that rocket may not be launched in this mod pack, or it requires mod script to spawn or unlock some items__YAFC__milestone-analysis-or-bug__ __YAFC__milestone-analysis-is-important__
 milestone-analysis-inaccessible-milestones=There are some milestones that are not accessible: __1__. You may remove these from milestone list__YAFC__milestone-analysis-or-bug__ __YAFC__milestone-analysis-is-important__
 milestone-analysis-or-bug=, or it might be due to a bug inside a mod or YAFC.
-milestone-analysis-is-important=A lot of YAFC's systems rely on objects being accessible, so some features may not work as intended.\n\nFor this reason YAFC has a Dependency Explorer that allows you to manually enable some of the core recipes. YAFC will iteratively try to unlock all the dependencies after each recipe you manually enabled. For most modpacks it's enough to unlock a few early recipes like any special recipes for plates that everything in the mod is based on.
+milestone-analysis-is-important=A lot of YAFC's systems rely on objects being accessible, so some features may not work as intended.\n\nFor this reason YAFC has a __YAFC__dependency-explorer__ that allows you to manually enable some of the core recipes. YAFC will iteratively try to unlock all the dependencies after each recipe you manually enabled. For most modpacks it's enough to unlock a few early recipes like any special recipes for plates that everything in the mod is based on.
 
 ; ImGuiUtils.cs
 search-hint=Search
